feat: wip sdk boost embed

--- a/packages/sdk/public/boost-embed.html
+++ b/packages/sdk/public/boost-embed.html
@@ -6,12 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Civil Boost loader test</title>
+    <title>Civil Boost</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    The boost feed will go here:
     <div id="civil-boost"></div>
-    That was the boost feed!
   </body>
 </html>
