--- a/packages/sdk/public/boost-embed.html
+++ b/packages/sdk/public/boost-embed.html
@@ -6,10 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Civil Boost</title>
+    <title>Civil Story Boost test</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="civil-boost"></div>
+    <p>Uralic languages are proven to form a genealogical unit, a language family. Not all speakers of these languages live in Siberia or have shamanistic religions. The largest populations, the Hungarians and Finns, live outside Siberia and are mostly Christian. Saami people had kept shamanic practices alive for a long time. They live in Europe, but practiced shamanism until the 18th century. Most others have only remnant elements of shamanism.</p>
+    <p>And now, a story boost:</p>
   </body>
 </html>
